Tutorial Js Added

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="row">
           <div class="fw mix-container home-main">
             <div class="mix sorting">
-              <a href="/sort/insertion.html" class="thumb-a">
+              <a href="/sort/index.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Insertion Sorting Algorithm</h3></div>
                 </div>
