--- a/graph/index.html
+++ b/graph/index.html
@@ -53,6 +53,41 @@
             justify-content: center;
         }
     </style>
+    <style>
+        .tutorial-container {
+            display: none;
+
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            z-index: 2;
+            background: rgba(0, 0, 0, 0.8);
+
+
+        }
+        .tutorial {
+
+            font-family: 'Baloo 2', cursive;
+            font-size: 1.5rem;
+            color: black;
+            text-align: center;
+            position: fixed;
+            z-index: 4555;
+
+            width: 70%;
+            height: 80%;
+            top: 10%;
+            left: 15%;
+            background: white;
+            display: block;
+            border: 2px solid teal;
+            border-radius: 10px;
+
+        }
+
+
+    </style>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Raleway:100,300,400,600,700"
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
@@ -61,6 +96,39 @@
 </head>
 
 <body class="bg-gray-900">
+<!-- Algorithm Tut -->
+<div class="tutorial-container "  id="tutorial">
+    <div class="tutorial">
+        <div id="tutorial-title" class="tutorial-header  mt-8 py-8 text-teal-500 text-6xl font-bold ">
+
+        </div>
+        <div class="tutorial-body p-4 text-2xl space-y-4">
+            <div id="tutorial-body">
+
+            </div>
+
+            <div class=" flex items-center justify-center">
+                <img id="tutorial-image" class="pt-4" src="../Images/bar.png" alt="">
+            </div>
+
+        </div>
+        <div class="tutorial-footer absolute bottom-0 p-3  flex justify-between w-full">
+            <button id="tutorial-skip" class="button bg-teal-500 px-2 hover:bg-green-400  text-white">
+                Skip Tutorial
+            </button>
+            <div>
+                <button id="tutorial-prev" data-val="0" class="button bg-teal-500 px-2 hover:bg-green-400  text-white">
+                    Prev
+                </button>
+                <button data-val="2" class="button bg-teal-500 px-2 hover:bg-green-400  text-white" id="tutorial-next">
+                    Next
+                </button>
+
+            </div>
+        </div>
+
+    </div>
+</div>
     <nav class="shadow bg-white">
         <div class="mx-auto container">
             <div class="flex justify-between items-center px-4 py-2">
@@ -150,6 +218,7 @@
 
     <script type="module">
         import sortingAlgorithmDetails from "../js/sort/sortingAlgorithmDetails.js"
+        import Tutorial from "../js/sort/tutorial.js"
         $(document).ready(function () {
 
             const startButton = $("#start");
@@ -157,15 +226,19 @@
             const speed = $("#speed");
             var START_X = 4;
             var START_Y = 16;
-            var END_X = 23;
-            var END_Y = 20;
+            var END_X = 5;
+            var END_Y = 18;
             startButton.attr("data-startX", START_X);
             startButton.attr("data-startY", START_Y);
             startButton.attr("data-endX", END_X);
             startButton.attr("data-endY", END_Y);
-            const height = 30;
-            const width = 30;
-            const cellSize = 3;
+            const height = 20;
+            const width = 20;
+            const cellSize = 5;
+
+            var tutorial = new Tutorial("mazharul Boss");
+
+            tutorial.show();
             const grid = new Grid(height, width, cellSize,startButton,START_X,START_Y,END_X,END_Y);
           
             var isRunning = false;
@@ -234,6 +307,22 @@
 
                 }
             );
+            //###################################################//
+            //###################################################//
+
+            $("#tutorial-next").click(function () {
+                    tutorial.setTutorial(document.getElementById("tutorial-next").dataset.val,"grid");
+                }
+            );
+            $("#tutorial-prev").click(function () {
+                    tutorial.setTutorial(document.getElementById("tutorial-prev").dataset.val,"grid");
+                }
+            );
+            $("#tutorial-skip").click(function () {
+                    tutorial.hide();
+                }
+            );
+
         });
     </script>
 </body>
