--- a/sort/index.html
+++ b/sort/index.html
@@ -103,7 +103,7 @@
     <div class="mx-auto container">
         <div class="flex justify-between items-center px-4 py-2">
             <div class="flex items-center">
-                <h1 class=" font-bold text-2xl ml-2">VisualAlgorithm</h1>
+                <a href="../"><h1 class=" font-bold text-2xl ml-2">AlgorithmDaVisualizer</h1></a>
             </div>
             <div class="flex items-center space-x-2 ">
                 <div class="font-bold text-lg">
@@ -362,11 +362,11 @@
         //###################################################//
         //###################################################//
         $("#tutorial-next").click(function () {
-                tutorial.setTutorial(document.getElementById("tutorial-next").dataset.val);
+                tutorial.setTutorial(document.getElementById("tutorial-next").dataset.val,"sort");
             }
         );
         $("#tutorial-prev").click(function () {
-                tutorial.setTutorial(document.getElementById("tutorial-prev").dataset.val);
+                tutorial.setTutorial(document.getElementById("tutorial-prev").dataset.val,"sort");
             }
         );
         $("#tutorial-skip").click(function () {
