--- a/graph/BTexpresstion/expresstion.html
+++ b/graph/BTexpresstion/expresstion.html
@@ -64,7 +64,8 @@
     <div class="array-container container mx-auto flex space-x-3 items-center font-mono">
         <label for="expression-Input" class="font-bold text-xl">Enter Expression</label>
 
-        <input id="expression-input" type="text" class="w-full text-lg bg-gray-100  p-3" value="((E+N)+(G+I))+((N+E)+(E+R))">
+        <input id="expression-input" type="text" class="w-full text-lg bg-gray-100  p-3"
+               value="((E+N)+(G+I))+((N+E)+(E+R))">
         <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg" id="buildTree">
             Build Tree
         </button>
@@ -73,6 +74,8 @@
         </button>
     </div>
 </div>
+
+<!-- Main Div for Expression tree-->
 <div id="viz"></div>
 
 <!-- Algorithm Details -->
@@ -106,8 +109,9 @@
                 The expression tree is a binary tree in which each internal node corresponds to the operator and each
                 leaf node corresponds to the operand in the expression. </br>
                 Inorder traversal of expression tree produces infix version of given postfix expression (same with
-                postorder traversal it gives postfix expression).  <a href="https://www.geeksforgeeks.org/expression-tree/">
-                    <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                postorder traversal it gives postfix expression). <a
+                    href="https://www.geeksforgeeks.org/expression-tree/">
+                <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
         </div>
     </div>
