Updated Algorithm details

--- a/dataStructure/stack/visualStackQueue.html
+++ b/dataStructure/stack/visualStackQueue.html
@@ -214,10 +214,10 @@
 
                 This feature makes it LIFO data structure. LIFO stands for Last-in-first-out. Here, the element which is
                 placed (inserted or added) last, is accessed first. In stack terminology, insertion operation is called
-                PUSH operation and removal operation is called POP operation. <a
-                    href="https://www.tutorialspoint.com/data_structures_algorithms/stack_algorithm.htm">
-                <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                PUSH operation and removal operation is called POP operation.
             </div>
+            <a href="https://www.tutorialspoint.com/data_structures_algorithms/stack_algorithm.htm">
+                <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
     </div>
 </div>
