--- a/graph/graph_new.html
+++ b/graph/graph_new.html
@@ -187,7 +187,8 @@
             </div>
             <div class="intro-y px-4 my-3 py-4 text-xl font-medium">
                 <h2>Description</h2>
-                <p class="text-sm font-thin" id="algorithm-description"></p>
+                <p class="text-sm font-thin" id="algorithm-description">
+                </p>
             </div>
         </div>
         <div class="col-span-4 bg-gray-100">
