--- a/graph/BTexpresstion/expresstion.html
+++ b/graph/BTexpresstion/expresstion.html
@@ -131,25 +131,27 @@
     let ex = "((E+N)+(G+I))+((N+E)+(E+R))"
     let bstWidget = new BST(ex);
 
+    let positionX = window.innerWidth * 0.2;
+    let positionY = window.innerHeight * 0.8;
 
     var xp = mainSvg.append("text")
-        .attr("x", 300)
-        .attr("y", 455)
-        .attr("text-anchor", "middle")
+        .attr("x", positionX)
+        .attr("y", positionY * 0.657)
+        .attr("text-anchor", "end")
         .style("font-size", "20px")
         .text("Prefix expression :");
 
     var yp = mainSvg.append("text")
-        .attr("x", 300)
-        .attr("y", 505)
-        .attr("text-anchor", "middle")
+        .attr("x", positionX)
+        .attr("y", positionY * 0.707)
+        .attr("text-anchor", "end")
         .style("font-size", "20px")
         .text("Infix expression :");
 
     var zp = mainSvg.append("text")
-        .attr("x", 300)
-        .attr("y", 555)
-        .attr("text-anchor", "middle")
+        .attr("x", positionX)
+        .attr("y", positionY * 0.757)
+        .attr("text-anchor", "end")
         .style("font-size", "20px")
         .text("Postfix expression :");
 
@@ -172,23 +174,23 @@
         edgeWeightPathSvg = mainSvg.append("g").attr("id", "edgeWeightPath");
 
         xp = mainSvg.append("text")
-            .attr("x", 300)
-            .attr("y", 455)
-            .attr("text-anchor", "middle")
+            .attr("x", positionX)
+            .attr("y", positionY * 0.65)
+            .attr("text-anchor", "end")
             .style("font-size", "20px")
             .text("Prefix expression :");
 
         yp = mainSvg.append("text")
-            .attr("x", 300)
-            .attr("y", 505)
-            .attr("text-anchor", "middle")
+            .attr("x", positionX)
+            .attr("y", positionY * 0.7)
+            .attr("text-anchor", "end")
             .style("font-size", "20px")
             .text("Infix expression :");
 
         zp = mainSvg.append("text")
-            .attr("x", 300)
-            .attr("y", 555)
-            .attr("text-anchor", "middle")
+            .attr("x", positionX)
+            .attr("y", positionY * 0.75)
+            .attr("text-anchor", "end")
             .style("font-size", "20px")
             .text("Postfix expression :");
 
