--- a/sort/index.html
+++ b/sort/index.html
@@ -64,7 +64,9 @@
 
 </head>
 
-<body class="bg-blue-100">
+<body class="bg-blue-100 js-container">
+<div class=" container" ></div>
+
 <!-- Algorithm Tut -->
 <div class="tutorial-container "  id="tutorial">
     <div class="tutorial">
@@ -120,8 +122,8 @@
 
                     <select id="speed" class="bg-white border border-gray-400 rounded-lg shadow-md px-4 py-2">
 
-                        <option value="10">Speed: Super Fast</option>
-                        <option value="100" selected>Speed: Fast</option>
+                        <option value="50">Speed: Super Fast</option>
+                        <option value="250" selected>Speed: Fast</option>
                         <option value="500">Speed: Medium</option>
                         <option value="1000">Speed: Slow</option>
                         <option value="2000">Speed: Super Slow</option>
@@ -157,7 +159,7 @@
         </button>
     </div>
 </div>
-<div class="shadow p-4 m-4  bg-white" style="position: relative; bottom: 0;min-width: 90vh;min-height:40vh;">
+<div id="barContainer" class="shadow p-4 m-4  bg-white" style="position: relative; bottom: 0;min-width: 90vh;min-height:40vh;">
     <div class="mother absolute bottom-0" style="border-bottom: 5px solid black;">
 
     </div>
@@ -181,7 +183,7 @@
         <div class="flex  items-center px-4 py-2">
             <div class="flex items-center space-x-8 ">
 
-                <button class="">
+                <button class="" id="previous">
                     <i class="fa-solid fa-backward-step fa-2x"></i>
                 </button>
                 <button id="play" class="">
@@ -192,7 +194,7 @@
                     <i class="fa-solid fa-circle-pause fa-2x"></i>
                 </button>
 
-                <button class="">
+                <button class="" id="next">
                     <i class="fa-solid fa-forward-step fa-2x"></i>
                 </button>
             </div>
@@ -251,7 +253,60 @@
     import sortingAlgorithmDetails from "../js/sort/sortingAlgorithmDetails.js"
     import Tutorial from "../js/sort/tutorial.js"
 
-    $(document).ready(function () {
+    $(document).ready(function (show) {
+
+
+        const Confettiful = function(el) {
+            this.el = el;
+            this.containerEl = null;
+
+            this.confettiFrequency = 3;
+            this.confettiColors = ['#EF2964', '#00C09D', '#2D87B0', '#48485E','#EFFF1D'];
+            this.confettiAnimations = ['slow', 'medium', 'fast'];
+
+            this._setupElements();
+            this._renderConfetti();
+        };
+
+        Confettiful.prototype._setupElements = function() {
+            const containerEl = document.createElement('div');
+            const elPosition = this.el.style.position;
+
+            if (elPosition !== 'relative' || elPosition !== 'absolute') {
+                this.el.style.position = 'relative';
+            }
+
+            containerEl.classList.add('confetti-container');
+
+            this.el.appendChild(containerEl);
+
+            this.containerEl = containerEl;
+        };
+
+        Confettiful.prototype._renderConfetti = function() {
+
+            this.confettiInterval = setInterval(() => {
+                const confettiEl = document.createElement('div');
+                const confettiSize = (Math.floor(Math.random() * 3) + 7) + 'px';
+                const confettiBackground = this.confettiColors[Math.floor(Math.random() * this.confettiColors.length)];
+                const confettiLeft = (Math.floor(Math.random() * this.el.offsetWidth)) + 'px';
+                const confettiAnimation = this.confettiAnimations[Math.floor(Math.random() * this.confettiAnimations.length)];
+
+                confettiEl.classList.add('confetti', 'confetti--animation-' + confettiAnimation);
+                confettiEl.style.left = confettiLeft;
+                confettiEl.style.width = confettiSize;
+                confettiEl.style.height = confettiSize;
+                confettiEl.style.backgroundColor = confettiBackground;
+
+                confettiEl.removeTimeout = setTimeout(function() {
+                    confettiEl.parentNode.removeChild(confettiEl);
+                }, 3000);
+
+                this.containerEl.appendChild(confettiEl);
+                
+            }, this.confettiFrequency);
+        };
+
         let sortButtonPause = $('#sortArrayPause');
         let sortButtonResume = $('#sortArrayResume');
         let startVisualize = $('#startVisualize');
@@ -260,13 +315,12 @@
         var currentStep = 0;
 
         var tutorial = new Tutorial(container);
-
-      tutorial.show();
+        // tutorial.show();
 
         let sort = new Sort(container, []);
         $('#speed').on('change', function () {
             let speed = $(this).val();
-            sort.speed = speed + 1;
+            sort.speed = speed;
 
         });
         startVisualize.on('click', function () {
@@ -290,6 +344,11 @@
 
         });
         $("#play").click(function () {
+            let status= sort.visualizeStatus;
+            if(!status){
+                alert("Please click visualize to start sorting");
+                return;
+            }
                 sort.setVisualizeStatus(true);
                 sort.visuaLizeBubbleSort();
                 $(this).addClass('hidden');
@@ -298,17 +357,23 @@
             }
         );
         $("#previous").click(function () {
-                let status = sort.visualizeStatus;
-                sort.setVisualizeStatus(false);
+            sort.setVisualizeStatus(false);
+            $("#sortArrayPause").addClass('hidden');
+            $("#play").removeClass('hidden');
+            sort.setVisualizeStatus(false);
                 sort.goBack();
+                console.log("previous");
 
             }
         );
         $("#next").click(function () {
-
-                let status = sort.visualizeStatus;
+            sort.setVisualizeStatus(false);
+            $("#sortArrayPause").addClass('hidden');
+            $("#play").removeClass('hidden');
+            sort.setVisualizeStatus(false);
                 sort.setVisualizeStatus(false);
                 sort.goForward();
+                console.log("next");
 
             }
         );
@@ -332,6 +397,7 @@
                 $('#averageCase').html(selectedAlgorithm.averageTime);
                 $('#bestCase').html(selectedAlgorithm.worstTime);
                 $('#spaceComplexity').html(selectedAlgorithm.spaceComplexity);
+              sort.reset();
 
             }
         );
