--- a/graph/index.html
+++ b/graph/index.html
@@ -141,8 +141,8 @@
                         <select id="selectAlgorithm"
                             class="bg-white border border-gray-400 rounded-lg shadow-md px-4 py-2">
                             <option value="">Select An Algorithm</option>
-                            <option value="bfs">BFS</option>
-                            <option value="dfs">DFS</option>
+                            <option value="gridBFS">BFS</option>
+                            <option value="gridDFS">DFS</option>
                         </select>
                     </div>
 
